# ynote

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  vercel.json
.github/workflows/: ci.yml  deploy.yml  release.yml
.vercel/: project.json
assets/themes/: default.css
assets/typst/: default.typ
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: assets.rs  check.rs  config.rs  error.rs  export.rs  export_docx.rs  export_pdf.rs  lib.rs  outline.rs  parse.rs  project.rs  render_html.rs  section.rs  slug.rs
crates/core/tests/: path_safety.rs  render_html.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs
crates/wasm/: Cargo.toml  build-pdf.sh  build-web.sh
crates/wasm/src/: lib.rs
docs/: CNAME  index.html
examples/field-notes/: arch.md  index.md  ynote.toml
examples/field-notes/essays/: on-writing-tools.md  the-quiet-web.md
examples/field-notes/notes/: reading-list.md  typography.md
tests/fixtures/project/: broken.md  kitchen-sink.md  papery.toml  ynote.toml
tests/fixtures/project/drafts/: wip.md
tests/fixtures/project/sub/: nested.md
ui/: fonts.css  index.html  main.js  style.css
web/: DEPLOY.md  app.js  index.html  style.css  welcome.js
