[package]
name = "ynote-cli"
description = "ynote command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ynote"
path = "src/main.rs"

[dependencies]
ynote-core = { workspace = true, features = ["pdf", "docx"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
notify.workspace = true
anyhow.workspace = true
