[package]
name = "papery-mcp"
description = "papery MCP stdio server — typed tool surface over papery-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "papery-mcp"
path = "src/main.rs"

[dependencies]
papery-core = { workspace = true, features = ["pdf", "docx"] }
rmcp = { version = "2.1.0", features = ["server", "transport-io", "macros"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
