[package]
name = "ynote-wasm"
description = "ynote core compiled to WebAssembly: the one renderer, in the browser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The same core the CLI/MCP/desktop adapters use. HTML pipeline only for now
# (default features) — no Typst/DOCX until the WASM export spike lands.
ynote-core = { workspace = true }
wasm-bindgen = "0.2"
serde_json.workspace = true

# Surface Rust panics as console errors during development.
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
# Typst-in-WASM PDF export. Heavy dependency tree — kept opt-in so the HTML
# pipeline iterates fast; enable with `wasm-pack build -- --features pdf`.
pdf = ["ynote-core/pdf"]

# rustc/LLVM emit post-MVP opcodes (bulk memory, non-trapping float→int casts
# from Typst, sign-extension, …); wasm-opt must be told to accept the same
# feature set. All are baseline-supported in every modern browser.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-sign-ext",
  "--enable-mutable-globals",
  "--enable-multivalue",
  "--enable-reference-types",
]

# Same wasm-opt flags for the size-first `release-wasm` cargo profile.
[package.metadata.wasm-pack.profile.release-wasm]
wasm-opt = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-sign-ext",
  "--enable-mutable-globals",
  "--enable-multivalue",
  "--enable-reference-types",
]
